// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendMoreCTA Component renders correctly 1`] = `
<Component
  condition={[Function]}
>
  <p>
    Need to send more?
     
    <Component>
      <Case
        condition={[Function]}
      >
        <PageLink
          to="/account/billing"
        >
          Switch to a new plan.
        </PageLink>
      </Case>
      <Case
        condition={[Function]}
      >
        <PageLink
          to="/account/billing"
        >
          Upgrade your account.
        </PageLink>
      </Case>
    </Component>
     
  </p>
</Component>
`;

exports[`SendMoreCTA Component renders correctly 2`] = `
<Component
  condition={[Function]}
>
  <Box
    display="flex"
    justifyContent="space-between"
    mt="200"
  >
    <Box
      alignItems="center"
      display="flex"
    >
      <Text
        mr="400"
      >
        Need to send more?
      </Text>
      <Component>
        <Case
          condition={[Function]}
        >
          <PageLink
            as={[Function]}
            to="/account/billing"
            variant="monochrome-secondary"
          >
            Switch to a new plan.
          </PageLink>
        </Case>
        <Case
          condition={[Function]}
        >
          <PageLink
            as={[Function]}
            to="/account/billing"
            variant="monochrome-secondary"
          >
            Upgrade your account.
          </PageLink>
        </Case>
      </Component>
    </Box>
    <div />
  </Box>
</Component>
`;
